<resources>
    <string name="app_name">CoinWatcher</string>
    <string name="price">Price</string>
    <string name="select_currency_to_list_crypto_in">Select currency to list crypto in:</string>
    <string name="add_currency_pair">Add currency pair</string>
    <string name="ticker">Ticker</string>
    <string name="marketcap">MarketCap</string>
    <string name="currency_in">Currency in</string>
    <string name="add">ADD</string>
    <string name="cancel">Cancel</string>
    <string name="traging_volume">Traging volume</string>
    <string name="price_chart">Price chart:</string>
    <string name="delete_pair">Delete pair</string>
    <string name="copyright">Copyright © CoinWatcher Inc.</string>
    <string name="about">About</string>
</resources>