<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvCoinName"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/ticker"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFragmentTitle" />

    <TextView
        android:id="@+id/tvFragmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/ticker"
        app:layout_constraintBottom_toTopOf="@+id/editTicker"
        app:layout_constraintStart_toStartOf="@+id/editTicker" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editTicker"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTicker"
        app:layout_constraintTop_toBottomOf="@+id/editTicker" />

    <EditText
        android:id="@+id/editMarketCap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/marketcap"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editPrice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editPrice"
        app:layout_constraintTop_toBottomOf="@+id/editPrice" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/price"
        app:layout_constraintBottom_toTopOf="@+id/editPrice"
        app:layout_constraintStart_toStartOf="@+id/editPrice" />

    <TextView
        android:id="@+id/tvMarketCap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/marketcap"
        app:layout_constraintBottom_toTopOf="@+id/editMarketCap"
        app:layout_constraintStart_toStartOf="@+id/editMarketCap" />

    <EditText
        android:id="@+id/editVsCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/currency_in"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editMarketCap"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editMarketCap"
        app:layout_constraintTop_toBottomOf="@+id/editMarketCap" />

    <TextView
        android:id="@+id/tvVsCurr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/currency_in"
        app:layout_constraintBottom_toTopOf="@+id/editVsCurrency"
        app:layout_constraintStart_toStartOf="@+id/editVsCurrency" />
</androidx.constraintlayout.widget.ConstraintLayout>